federated2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.global-static-ip-name: “KINGRESS”
spec:
  backend:
    serviceName: nginx
    servicePort: 80
